backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-backend
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: management-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: management-backend
    spec:
      containers:
        - name: management-backend
          image: thedrdoom/management-backend:latest
          ports:
            - containerPort: 3005

          livenessProbe:
            tcpSocket:
              port: 3005
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            tcpSocket:
              port: 3005
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
