backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: management-backend-service
  namespace: app
spec:
  selector:
    app: management-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 3005
  type: ClusterIP
