ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-ingress
  namespace: app
spec:
  ingressClassName: nginx

  rules:
    - host: management.webanixsolutions.com  # ex - host base roting 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: management-frontend-service
                port:
                  number: 3000

    - host: apimanagement.webanixsolutions.com  # ex - host base roting 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: management-backend-service
                port:
                  number: 4000
